fixed font of form on mobile, optimized all css

--- a/styles.css
+++ b/styles.css
@@ -127,6 +127,171 @@ body {
     /* Increase the scale for a cooler zoom effect */
 }
 
+/* Styles for the footer */
+footer {
+    background-color: #222324;
+    color: #fff;
+    text-align: center;
+    padding: 10px;
+    position: relative;
+    /* relative position */
+    bottom: 0;
+    /* Stick to the bottom of the viewport */
+    width: 100%;
+    /* Full width */
+}
+
+/* Normal state */
+.address a {
+    text-decoration: none;
+    margin-bottom: 10px;
+    display: block;
+    font-weight: bold;
+    color: #fff;
+}
+
+/* Hover, Visited, Focus, and Active states */
+.address a:hover,
+.address a:visited,
+.address a:focus,
+.address a:active {
+    text-decoration: none;
+    color: #fff;
+}
+
+
+/* Style for social media icons */
+.social {
+    text-decoration: none;
+    font-size: 32px;
+    /* Set the icon size */
+    color: orange;
+    /* Set the icon color */
+    transition: transform 0.2s ease-in-out;
+    /* Add a subtle hover effect */
+    margin-right: 10px;
+    /* Add spacing between icons if needed */
+}
+
+.social:hover {
+    transform: scale(1.2);
+    /* Increase size on hover for a pop-out effect */
+}
+
+/* Styles for social media icons in the footer */
+footer .social span {
+    font-size: 32px;
+    /* Set the desired font size */
+}
+
+/*Styles for Contact Page */
+
+form#form {
+    text-align: center;
+}
+
+h1 {
+    color: #fff;
+    padding-top: 10px;
+    text-align: center;
+    font-size: 60px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+h2 {
+    color: #fff;
+    padding-top: 10px;
+    text-align: center;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold
+}
+
+h3 {
+    color: #fff;
+    text-align: center;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
+    margin-top: -10px
+}
+
+input {
+    background-color: #fff;
+    width: 70%;
+    font-size: 20px;
+    padding: 16px 16px;
+    border-radius: 10px;
+    border-color: black;
+    margin-bottom: 20px;
+}
+
+input:focus-within {
+    outline: none;
+    border-color: orange;
+    border-width: 3px;
+}
+
+textarea {
+    background-color: #fff;
+    width: 70%;
+    padding: 16px 16px;
+    border-radius: 10px;
+    border-color: black;
+    margin-bottom: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+
+}
+
+textarea:focus-within {
+    outline: none;
+    border-color: orange;
+    border-width: 3px;
+}
+
+button {
+    background-color: orange;
+    border-radius: 20px;
+    border-color: black;
+    font-size: 22px;
+    padding: 10px 18px;
+    text-align: center;
+    display: flex;
+    margin: auto;
+}
+
+button:hover {
+    opacity: 80%;
+    cursor: pointer;
+}
+
+.logo {
+    max-width: 50%;
+    height: auto;
+    text-align: center;
+    display: flex;
+    margin: auto;
+    mix-blend-mode: multiply;
+}
+
+/* Style for the map container */
+.map-container {
+    width: 100%;
+    /* Full width */
+    max-width: 100%;
+    /* Ensure it doesn't exceed the viewport width */
+    text-align: center;
+    /* Center the map */
+    margin-top: 20px;
+    /* Adjust margin as needed */
+}
+
+/* Style for the map iframe */
+.map-container iframe {
+    width: 100%;
+    height: 100%;
+    /* Full height */
+}
 
 /* Media query for responsive layout */
 @media (max-width: 1023px) {
@@ -139,12 +304,16 @@ body {
 /* Media query for mobile layout */
 @media (max-width: 854px) {
 
+    input {
+        font-size: 12px;
+    }
+
     form#form {
         margin-left: -30px;
         margin-right: -30px;
         margin-top: -30px;
     }
-    
+
     .gallery {
         column-count: 1;
         /* 1 column for screens up to 767px wide (e.g., mobile) */
@@ -227,169 +396,4 @@ body {
     footer.hide .address {
         display: none;
     }
-}
-
-/* Styles for the footer */
-footer {
-    background-color: #222324;
-    color: #fff;
-    text-align: center;
-    padding: 10px;
-    position: relative;
-    /* relative position */
-    bottom: 0;
-    /* Stick to the bottom of the viewport */
-    width: 100%;
-    /* Full width */
-}
-
-/* Normal state */
-.address a {
-    text-decoration: none;
-    margin-bottom: 10px;
-    display: block;
-    font-weight: bold;
-    color: #fff;
-}
-
-/* Hover, Visited, Focus, and Active states */
-.address a:hover,
-.address a:visited,
-.address a:focus,
-.address a:active {
-    text-decoration: none;
-    color: #fff;
-}
-
-
-/* Style for social media icons */
-.social {
-    text-decoration: none;
-    font-size: 32px;
-    /* Set the icon size */
-    color: orange;
-    /* Set the icon color */
-    transition: transform 0.2s ease-in-out;
-    /* Add a subtle hover effect */
-    margin-right: 10px;
-    /* Add spacing between icons if needed */
-}
-
-.social:hover {
-    transform: scale(1.2);
-    /* Increase size on hover for a pop-out effect */
-}
-
-/* Styles for social media icons in the footer */
-footer .social span {
-    font-size: 32px;
-    /* Set the desired font size */
-}
-
-/*Styles for Contact Page */
-h1 {
-    color: #fff;
-    padding-top: 10px;
-    text-align: center;
-    font-size: 60px;
-    font-family: Arial, Helvetica, sans-serif;
-}
-
-h2 {
-    color: #fff;
-    padding-top: 10px;
-    text-align: center;
-    font-size: 20px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: bold
-}
-
-h3 {
-    color: #fff;
-    text-align: center;
-    font-size: 15px;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: lighter;
-    margin-top: -10px
-}
-
-form#form {
-    text-align: center;
-}
-
-input {
-    background-color: #fff;
-    width: 70%;
-    font-size: 20px;
-    padding: 16px 16px;
-    border-radius: 10px;
-    border-color: black;
-    margin-bottom: 20px;
-}
-
-textarea {
-    background-color: #fff;
-    width: 70%;
-    padding: 16px 16px;
-    border-radius: 10px;
-    border-color: black;
-    margin-bottom: 25px;
-    font-family: Arial, Helvetica, sans-serif;
-
-}
-
-input:focus-within {
-    outline: none;
-    border-color: orange;
-    border-width: 3px;
-}
-
-textarea:focus-within {
-    outline: none;
-    border-color: orange;
-    border-width: 3px;
-}
-
-button {
-    background-color: orange;
-    border-radius: 20px;
-    border-color: black;
-    font-size: 22px;
-    padding: 10px 18px;
-    text-align: center;
-    display: flex;
-    margin: auto;
-}
-
-button:hover {
-    opacity: 80%;
-    cursor: pointer;
-}
-
-.logo {
-    max-width: 50%;
-    height: auto;
-    text-align: center;
-    display: flex;
-    margin: auto;
-    mix-blend-mode: multiply;
-}
-
-/* Style for the map container */
-.map-container {
-    width: 100%;
-    /* Full width */
-    max-width: 100%;
-    /* Ensure it doesn't exceed the viewport width */
-    text-align: center;
-    /* Center the map */
-    margin-top: 20px;
-    /* Adjust margin as needed */
-}
-
-/* Style for the map iframe */
-.map-container iframe {
-    width: 100%;
-    height: 100%;
-    /* Full height */
 }
